<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>net.sf.needles</groupId>
	<artifactId>parent</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>Needles</name>

	<description>Needles is an api to monitor runtime java processes.</description>
	<url>http://javaneedles.sourceforge.net</url>
	<inceptionYear>2013</inceptionYear>
	<licenses>
		<license>
			<name>BSD</name>
			<url>${license.url}</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<profiles>
		<profile>
			<id>sf</id>
			<distributionManagement>
				<repository>
					<id>ssh-repository</id>
					<name>SourceForgeArtefact</name>
					<url>scp://shell.sourceforge.net/home/frs/project/p/ne/needles</url>
				</repository>
				<snapshotRepository>
					<id>ssh-repository</id>
					<name>SourceForgeSNAPSHOTArtefact</name>
					<url>scp://shell.sourceforge.net/home/frs/project/p/ne/needles</url>
				</snapshotRepository>
			</distributionManagement>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-assembly-plugin</artifactId>
						<version>2.2.1</version>
						<executions>
							<execution>
								<id>make shared resources</id>
								<goals>
									<goal>single</goal>
								</goals>
								<phase>package</phase>
								<configuration>
									<descriptors>
										<descriptor>${basedir}/src/main/assembly/resources.xml</descriptor>
									</descriptors>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>release-sign-artifacts</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<distributionManagement>
				<site>
					<id>javaneedles-project.sf.net</id>
					<name>SourceForgeSite</name>
					<url>scp://shell.sourceforge.net/home/project-web/TODO/htdocs</url>
				</site>
				<repository>
					<id>oss-nexus-releases</id>
					<name>Nexus Release Repository</name>
					<url>http://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
				</repository>
				<snapshotRepository>
					<id>oss-nexus-snapshots</id>
					<name>Nexus Snapshot Repository</name>
					<url>http://oss.sonatype.org/content/repositories/snapshots</url>
				</snapshotRepository>
			</distributionManagement>

			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.1</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<issueManagement>
		<system>sourceforge</system>
		<url>http://sourceforge.net/tracker/?group_id=TODO</url>
	</issueManagement>

	<scm>
		<connection>scm:git:ssh://github.com/Needles.git</connection>
  		<developerConnection>scm:git:ssh://github.com/Needles.git</developerConnection>
  		<url>scm:git:ssh://github.com/Needles.git</url>		
	</scm>

	<properties>
		<project.build.sourceEncoding>${encoding}</project.build.sourceEncoding>
		<license.name>BSD</license.name>
		<license.url>http://www.freebsd.org/copyright/license.html</license.url>
		<java.version>1.6</java.version>
		<encoding>UTF-8</encoding>
		<main.basedir>${project.basedir}</main.basedir>
	</properties>

	<developers>
		<developer>
			<id>mbrade</id>
			<name>Marco Brade</name><url>https://github.com/mbrade</url>
			<roles>
				<role>architect</role>
				<role>developer</role>
			</roles>
			<timezone>+1</timezone>
		</developer>
	</developers>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.8.2</version>
				<type>jar</type>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>commons-lang</groupId>
				<artifactId>commons-lang</artifactId>
				<version>2.6</version>
			</dependency>
			<dependency>
				<groupId>log4j</groupId>
				<artifactId>log4j</artifactId>
				<version>1.2.16</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<modules>
		<module>needlescore</module>
		<module>needlesconfiguration</module>
		<module>needlesbase</module>
		<module>needles-webapp</module>
		<module>needles-spring-httpinvoker</module>
		<module>needlesservice</module>
		<module>needlesservice-base</module>
	</modules>

	<build>
		<resources>
			<resource>
				<directory>.</directory>
				<includes>
					<include>LICENSE.txt</include>
				</includes>
				<targetPath>META-INF</targetPath>
			</resource>
			<resource>
				<directory>src/main/java</directory>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<directory>src/test/java</directory>
			</testResource>
			<testResource>
				<directory>src/test/resources</directory>
			</testResource>
		</testResources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>2.3.2</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.mycila.maven-license-plugin</groupId>
				<artifactId>maven-license-plugin</artifactId>
				<version>1.8.0</version>
				<dependencies>
					<dependency>
						<groupId>com.mycila.xmltool</groupId>
						<artifactId>xmltool</artifactId>
						<version>2.11</version>
					</dependency>
				</dependencies>
				<configuration>
					<excludes>
						<exclude>**/*.json</exclude>
					</excludes>
					<!--<basedir>${basedir}</basedir> -->
					<header>${main.basedir}/src/etc/header.txt</header>
					<quiet>false</quiet>
					<failIfMissing>true</failIfMissing>
					<aggregate>false</aggregate>
					<includes>
						<include>**/src/**</include>
						<include>**/test/**</include>
					</includes>
					<useDefaultExcludes>true</useDefaultExcludes>
					<useDefaultMapping>true</useDefaultMapping>
					<strictCheck>true</strictCheck>
					<properties>
						<year>${project.inceptionYear}</year>
						<project.name>${project.name}</project.name>
						<license>${license.name}</license>
						<license.url>${license.url}</license.url>
						<developer.name.1>${project.developers[0].name}
							[${project.developers[0].url}]</developer.name.1>
						<developer.name.2>${project.developers[1].name}
							[${project.developers[1].url}]</developer.name.2>
					</properties>
					<encoding>${encoding}</encoding>
					<headerDefinitions>
						<headerDefinition>${main.basedir}/src/etc/licenseplugin-javadoc.xml</headerDefinition>
					</headerDefinitions>
				</configuration>
				<executions>
					<execution>
						<phase>generate-sources</phase>
						<goals>
							<goal>format</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.3.1</version>
				<configuration>
					<archive>
						<index>true</index>
						<manifest>
							<addClasspath>true</addClasspath>
						</manifest>
						<manifestEntries>
							<mode>development</mode>
							<url>${project.url}</url>
							<key>value</key>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>2.1.2</version>
					<executions>
						<execution>
							<id>attach-sources</id>
							<phase>verify</phase>
							<goals>
								<goal>jar-no-fork</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-changes-plugin</artifactId>
				<version>2.4</version>
				<inherited>false</inherited>
				<reportSets>
					<reportSet>
						<reports>
							<report>changes-report</report>
						</reports>
					</reportSet>
				</reportSets>
				<configuration>
					<issueLinkTemplatePerSystem>
						<sourceforge>http://sourceforge.net/support/tracker.php?aid=%ISSUE%</sourceforge>
					</issueLinkTemplatePerSystem>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
				<version>2.3.1</version>
				<configuration>
					<maxHeap>512</maxHeap>
					<fork>true</fork>
					<outputEncoding>${encoding}</outputEncoding>
					<xmlOutput>true</xmlOutput>
					<!-- Optional derectory to put findbugs xdoc xml report -->
					<findbugsXmlOutput>true</findbugsXmlOutput>
					<findbugsXmlOutputDirectory>target/site</findbugsXmlOutputDirectory>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
				<version>2.4</version>
				<configuration>
					<check>
						<branchRate>75</branchRate>
						<lineRate>75</lineRate>
						<haltOnFailure>false</haltOnFailure>
						<totalBranchRate>75</totalBranchRate>
						<totalLineRate>75</totalLineRate>
						<packageLineRate>75</packageLineRate>
						<packageBranchRate>75</packageBranchRate>
					</check>
					<formats>
						<format>html</format>
						<format>xml</format>
					</formats>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>2.5</version>
				<configuration>
					<encoding>${encoding}</encoding>
					<configLocation>${basedir}/src/etc/checkstyle.xml</configLocation>
					<enableRulesSummary>false</enableRulesSummary>
					<fork>true</fork>
					<meminitial>128m</meminitial>
					<maxmem>512m</maxmem>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-changes-plugin</artifactId>
				<version>2.3</version>
				<reportSets>
					<reportSet>
						<reports>
							<report>changes-report</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.7</version>
				<reportSets>
					<reportSet>
						<id>non-aggregate</id>
						<configuration>
							<includeDependencySources>false</includeDependencySources>
							<javaApiLinks>
								<property>
									<name>api_${java.version}</name>
									<value>http://download.oracle.com/javase/6/docs/api/</value>
								</property>
								<property>
									<name>spring</name>
									<value>http://static.springsource.org/spring/docs/2.5.x/api</value>
								</property>
							</javaApiLinks>
						</configuration>
						<reports>
							<report>javadoc</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
			<plugin>
				<artifactId>maven-pmd-plugin</artifactId>
				<version>2.5</version>
				<configuration>
					<linkXref>false</linkXref>
					<sourceEncoding>${encoding}</sourceEncoding>
					<minimumTokens>100</minimumTokens>
					<targetJdk>${java.version}</targetJdk>
				</configuration>
				<reportSets>
					<reportSet>
						<reports>
							<report>pmd</report>
							<report>cpd</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.6</version>
				<configuration>
					<includes>
						<include>**/*Suite.java</include>
						<include>**/*Test.java</include>
					</includes>
					<parallelMavenExecution>true</parallelMavenExecution>
					<perCoreThreadCount>2</perCoreThreadCount>
					<forkMode>once</forkMode>
					<argLine>-Xmx1024m -XX:MaxPermSize=128M</argLine>
					<aggregate>true</aggregate>
				</configuration>
			</plugin>
		</plugins>
	</reporting>
</project>